@@ -1457,6 +1457,16 @@ function sq_fixatts($tagname,
         if (preg_match("/^[\'\"]\s*cid:/si", $attvalue)){
             $attary{$attname} = sq_cid2http($message, $id, $attvalue, $mailbox);
         }
+
+        /**
+         * "Hack" fix for Outlook using propriatary outbind:// protocol in img tags.
+         * One day MS might actually make it match something useful, for now, falling
+         * back to using cid2http, so we can grab the blank.png.
+         */
+        if (preg_match("/^[\'\"]\s*outbind:\/\//si", $attvalue)) {
+            $attary{$attname} = sq_cid2http($message, $id, $attvalue, $mailbox);
+        }
+
     }
     /**
     * See if we need to append any attributes to this tag.
@@ -1857,7 +1867,8 @@ function magicHTML($body, $id, $message, $mailbox = 'INBOX') {
                                 "img",
                                 "br",
                                 "hr",
-                                "input"
+                                "input",
+                                "outbind"
                                 );
 
     $force_tag_closing = true;
